# IntelligenceApi

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
app/api/externalApis/: agifyApi.py  genederizeApi.py  nationalizeApi.py
app/api/routes/: profileRoutes.py
app/data/models/: profileDetails.py
app/data/repository/: profileDatabase.py
app/data/respository/: profileDatabase.py
app/schemas/Requests/: ProfileRequests.py
app/schemas/Responses/: ProfileResponses.py
app/services/: profileService.py
app/utils/: classifyGroups.py
